fixed a bug when creating a new product label from a product that doesn't have set any journey points